tests/fixtures/invalid/set_lt_str.py
# Cannot compare with < Set[int] and Str
x: bool = {1, 2, 3} < "hello"
